k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      serviceAccountName: api-sa
      securityContext:
        fsGroup: 101
      containers:
        - name: api
          image: aminmarheraoui553/api:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
