k8s/ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:
      serviceAccountName: ui-sa
      containers:
        - name: ui
          image: aminmarheraoui553/ui:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
